[IMP] bump version

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
 Original Author
 ---------------
 Sébastien Alix <sebastien.alix@osiell.com>, <seb@usr-src.org>
+
+Contributors
+---------------
+Mihran Thalhath <mihranz7@gmail.com>, <mihranthalhath@gmail.com>
